k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: mongodb-deployment
  namespace: e-com
spec:
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
    metadata:
      labels:
        app: mongodb-deployment
    spec:
      containers:
      - name: mongodb-deployment
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: mongo-storage
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
