k8s/ecom-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: e-com
spec:
  selector:
    app: backend-deployment
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
