k8s/ecom-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: e-com
spec:
  selector:
    app: front-deployment
  ports:
    - port: 80          # Cluster-wide port (ingress will use this)
      targetPort: 5174  # Container port your app is actually listening on
  type: ClusterIP
