k8s/ecom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  namespace: e-com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ecom-easy
    http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-svc
            port:
              number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
